--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,14 +7,15 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #4545A1;
+  --ifm-color-primary-dark: #1F1F7A;
+  --ifm-color-primary-darker: #0D0D59;
+  --ifm-color-primary-darkest: #030330;
+  --ifm-color-primary-light: #9898CD;
+  --ifm-color-primary-lighter: #C2C2E5;
+  --ifm-color-primary-lightest: #EBEBF5;
   --ifm-code-font-size: 95%;
+  font-size: 1rem;
 }
 
 .docusaurus-highlight-code-line {
