--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,7 +18,9 @@
   --ifm-color-primary-light: #9898CD;
   --ifm-color-primary-lighter: #C2C2E5;
   --ifm-color-primary-lightest: #EBEBF5;
+  --ifm-color-danger: rgb(251, 251, 157);
   --ifm-code-font-size: 95%;
+  --ifm-alert-color: black;
   font-size: 1rem;
 }
 
