--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,6 +9,7 @@
 
 @import '@animaliads/css-tokens/global-tokens.css';
 @import '@animaliads/po-ui-brand/theme.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 :root {
   --ifm-color-primary: #4545A1;
@@ -18,14 +19,26 @@
   --ifm-color-primary-light: #9898CD;
   --ifm-color-primary-lighter: #C2C2E5;
   --ifm-color-primary-lightest: #EBEBF5;
+  --ifm-color-neutral-light:#dddd;
+  --ifm-color-neutral-dark:#aaaa;
   --ifm-color-danger: rgb(251, 251, 157);
   --ifm-code-font-size: 95%;
   --ifm-alert-color: black;
+  --ifm-font-family-base: 'Inter', sans-serif;
   font-size: 1rem;
 }
 
+.ani-button-primary{
+  background-color:var(--ifm-color-primary);
+  min-height: 44px;
+  padding:8px;
+  stroke-width: 0;
+  color:#ffff;
+  border-radius: 4px;
+}
+
 .docusaurus-highlight-code-line {
-  background-color: rgb(72, 77, 91);
+  background-color: rgb(76, 72, 91);
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
@@ -34,5 +47,6 @@
 html[data-theme='dark'] {
   --ifm-color-primary: var(--ifm-color-primary-light);
   --ifm-color-primary-dark: var(--ifm-color-primary-lighter);
+  --ifm-color-neutral-light:var(--ifm-color-neutral-dark);
   /* any other colors you wish to overwrite */
 }
