--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,11 +6,20 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
-  text-align: center;
+  padding: 4rem 2rem;
+  margin: 1rem;
+  text-align: left;
   position: relative;
   overflow: hidden;
+  border-radius: 4px;
+  background-color: var(--ifm-color-neutral-light);
+  stroke: aqua;
 }
+
+h1{
+  font-size: 2rem;
+}
+
 
 @media screen and (max-width: 966px) {
   .heroBanner {
@@ -20,6 +29,7 @@
 
 .buttons {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
 }
+
