--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,6 +19,10 @@
   --ifm-color-primary-light: #9898CD;
   --ifm-color-primary-lighter: #C2C2E5;
   --ifm-color-primary-lightest: #EBEBF5;
+  --ifm-color-neutral-light-00:#ffffff;
+  --ifm-color-neutral-light-05:#f9f9fa;
+  --ifm-color-neutral-light-10:#ececee;
+  --ifm-color-neutral-light-20:#d0d0d7;
   --ifm-color-neutral-light:#dddd;
   --ifm-color-neutral-dark:#aaaa;
   --ifm-color-danger: rgb(251, 251, 157);
@@ -36,6 +40,13 @@
   color:#ffff;
   border-radius: 4px;
 }
+.ani-button-secondary{
+  min-height: 44px;
+  padding:8px;
+  border: 1px var(--ifm-color-neutral-light-00) solid;
+  color:#ffff;
+  border-radius: 4px;
+}
 
 .docusaurus-highlight-code-line {
   background-color: rgb(76, 72, 91);
@@ -48,5 +59,6 @@ html[data-theme='dark'] {
   --ifm-color-primary: var(--ifm-color-primary-light);
   --ifm-color-primary-dark: var(--ifm-color-primary-lighter);
   --ifm-color-neutral-light:var(--ifm-color-neutral-dark);
+  --ifm-color-neutral-light-00:var(--ifm-color-neutral-dark);
   /* any other colors you wish to overwrite */
 }
