--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,14 +6,21 @@
  */
 
 .heroBanner {
-  padding: 4rem 2rem;
-  margin: 1rem;
+  padding: 12rem 1.5rem;
   text-align: left;
   position: relative;
   overflow: hidden;
   border-radius: 4px;
-  background-color: var(--ifm-color-neutral-light);
-  stroke: aqua;
+  background-image: url('animalia_mascot.png');
+  background-size: cover;
+  background-color: var(--ifm-color-primary);
+  color: var(--ifm-color-neutral-light-00);
+}
+.intro{
+  width: 35%;
+}
+.intro h1 {
+  font-size: 3rem;
 }
 
 h1{
