--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -2,12 +2,12 @@
 
 .features {
   display: flex;
-  align-items: center;
+  align-items: left;
   padding: 2rem 0;
   width: 100%;
 }
 
 .featureSvg {
-  height: 200px;
-  width: 200px;
+  height: 100%;
+  width: 100%;
 }
