hide title navbar

--- a/src/components/HomepageHighlight.module.css
+++ b/src/components/HomepageHighlight.module.css
@@ -1,13 +1,10 @@
 /* stylelint-disable docusaurus/copyright-header */
 
-.features {
+.highlight {
     display: flex;
     align-items: left;
     padding: 2rem 0;
     width: 100%;
-  }
-  
-  .highSvg {
-    height: 100%;
-    width: 100%;
+    stroke-width: 3px;
+    stroke: aqua;
   }
