--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -13,7 +13,7 @@
   border-radius: 4px;
   background-image: url('animalia_mascot.png');
   background-size: cover;
-  background-color: var(--ifm-color-primary);
+  background-color: var(--ifm-color-primary-dark);
   color: var(--ifm-color-neutral-light-00);
 }
 .intro{
@@ -22,6 +22,16 @@
 .intro h1 {
   font-size: 3rem;
 }
+
+@media screen and (max-width:61em){
+  .intro{
+    width: 70%;
+  }
+  .intro h1 {
+    font-size: 2rem;
+  }
+}
+
 
 h1{
   font-size: 2rem;
