--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -3,7 +3,7 @@
 .features {
   display: flex;
   align-items: left;
-  padding: 2rem 0;
+  padding: 8rem 0;
   width: 100%;
 }
 
@@ -13,7 +13,15 @@
 }
 .tagline{
   font-size: 0.75rem;
+  margin-bottom: 0.5rem;
 }
-.headline{
-  font-size: 1.5rem;
+.headline01{
+  font-size: 2rem;
+}
+.headline02{
+  font-size: 1rem;
+}
+.presentation{
+  margin-right: 92px;
+  align-items: left;
 }
